--- a/inclass.tex
+++ b/inclass.tex
@@ -1105,7 +1105,7 @@ Values v := n | true | false | fn x => e
 \section{09 March}
 \begin{enumerate}
     \item Evaluating expressions (recursion)
-    \item Turing theory into code
+    \item Turning theory into code
     \item Modules
 \end{enumerate}
 
@@ -1417,7 +1417,7 @@ Recall that we needed type annotations on functions. \verb~fn x : int => x~
 
 Does an expression have a unique type? \verb~fn x => x~ could have the type \verb~int->int~ or \verb~bool->bool~, etc., however this function does have one principle type \verb~'a->'a~.
 
-\textbf{The question:} how can we infer the principle type of an expression \emph{without} given type annotations?
+\textbf{The question:} how can we infer the principle type of an expression \emph{without} being given type annotations?
 
 Example:
 \begin{verbatim}
@@ -1455,7 +1455,7 @@ How do we instantiate type variables? Substitution!
 \emph{Two views:}
 \begin{enumerate}
     \item Are \emph{all} substitution instances of \verb~e~ well-typed? \\
-        If e has some type T and constraints some type variables $\alpha_1, \ldots, \alpha_n$, then e has type \verb~[T1/'a1 ... Tn/'an] T~ for every $T_1, \ldots T_n$?
+        If e has some type T and constrains some type variables $\alpha_1, \ldots, \alpha_n$, then e has type \verb~[T1/'a1 ... Tn/'an] T~ for every $T_1, \ldots T_n$?
     \item Does there exist some substitution instance such that e has type T?
 \end{enumerate}
 
@@ -1463,7 +1463,7 @@ For example: \verb~fn x => x+1~ has type $\beta$? Choose for $\beta =$ \verb~int
 
 \verb~fn x => x~ has type $\beta$? Choose for $\beta=$\verb~int->int~ or \verb~bool->bool~ or, most generally, \verb~'a->'a~.
 
-Will \verb~fn x => x+1~ have type \verb~'b->bool~? No. there is instantiation for \verb~'b~.
+Will \verb~fn x => x+1~ have type \verb~'b->bool~? No. there is no instantiation for \verb~'b~.
 
 \subsubsection{Type inference}
 \textbf{(1)} use typing rules to generate constraints. \textleftarrow will always succeed
@@ -1594,7 +1594,8 @@ C ^ tt => C
 C ^ int = int => C
 C ^ bool = bool => C
 C ^ T1->T2 = S1->S2 => C ^ T1=S2 ^ T2=S2
-C ^ 'a = T => [T/'a] C (provided 'a is not in FV(T)) (occurs check -- prevents circular terms)
+C ^ 'a = T => [T/'a] C (provided 'a is not in FV(T))
+    (occurs check -- prevents circular terms)
 C ^ T = 'a => [T/'a] C (same provisions)
 \end{verbatim}
 
@@ -1743,7 +1744,8 @@ in r
 end
 
 (* SML *)
-Warning : type variables are not generalized because of value restriction are instantiated with dummy types:  ?X1->?X1 ref
+Warning : type variables are not generalized because of value restriction 
+    are instantiated with dummy types:  ?X1->?X1 ref
 \end{verbatim}
 
 %%
@@ -1755,7 +1757,7 @@ So far, we have type inference rules.
 
 \textbf{Hindley-Milner} (type inference) -- \emph{Goal:} infer the most general type of an expression without declaring any types.
 
-\textbf{Disadvantages of not writing type annotations:}
+\textbf{Advantages of writing type annotations:}
 \begin{itemize}
     \item Gives better error messages (programmer communicates his or her intent)
     \item High-grade (high-quality) documentation -- does not get out of sync with the code
