--- a/inclass.tex
+++ b/inclass.tex
@@ -293,8 +293,6 @@ Our only real restriction on anonymous functions is that they cannot be recursiv
 \section{25 \& 30 January}
 These two lectures were taught by a TA, and cover higher-order functions, currying, and staging evaluation. The material can be found in the relevant pdfs.
 
-
-\pagebreak
 \section{03 February}
 % Continuations
 \subsection{Regular Expression Matching}
@@ -1342,20 +1340,21 @@ T := ... | T1 -> T2
 V := ... | fn x => e
 \end{verbatim}
 
+\[
+    \infer{\Gamma \vdash \verb~fn x => if x=0 then 4 else x+2 : int~}{
+        \Gamma, \verb~x:int ~ \vdash \verb~if x=0 then 4 else x+2 : int~
+    }
+\]
+
+The following rule cannot be interpreted as inferring a type:
+\[
+    \infer{\Gamma \vdash \verb~fn x => e : ~ T_1 \rightarrow T_2}{
+        \Gamma, x : T_1 \vdash e : T_2
+    }
+\]
+
+Solution -- annotate $x$ with its type:
 \begin{verbatim}
-
-assume x:int, verify that if x=0 else x+2 has type int
-------------------------------------
-fn x => if x=0 then 4 else x+2 : int
-\end{verbatim}
-
-\begin{verbatim}
-(* this rule cannot be interpreted as inferring a type *)
-G1xT1|-e:T2
------------------------
-G|-fn x => e : T1 -> T2
-
-(* solution: annotate x with its type *)
 fn x : T1 => e
 
 fn x => if fst x=0 then snd x
@@ -1365,40 +1364,42 @@ fn x => if fst x=0 then snd x
 
 Without type annotations, \verb~fn x => x~ has infinitely many types. With type annotations, we can infer a unique type.
 
-What is the most general type of an expression? \verb~'a~ ``principle type"
+What is the most general type of an expression? $\alpha$ -- the ``principle type".
 
 Extremely important rule:
-\begin{verbatim}
-G|-e1:T1->T2  G|-e2:T1
--------------------------
-G |- e1 e2 : T2
-\end{verbatim}
+\[
+    \infer{\Gamma \vdash e_1 e_2 : T_2}{
+        \Gamma \vdash e_1 : T_1 \rightarrow T_2
+        &
+        \Gamma \vdash e_2 : T_1
+    }
+\]
 
 New reference type:
 \begin{verbatim}
 T := ... | T1 ref | unit
-
 e := ... | !e | e := e' | ref e
 \end{verbatim}
 
+\[
+    \infer{\Gamma \vdash \verb~!e : T~}{
+        \Gamma \vdash \verb~ e : T ref~
+    }
+\]
+\[
+    \infer{\Gamma \vdash \verb~ ref e : ref T~}{
+        \Gamma \vdash e : T
+    }
+\]
+\[
+    \infer{\Gamma \vdash \verb~e := e' : unit~}{
+        \Gamma \vdash \verb~ e : T ref~
+        &
+        \Gamma \vdash e^{\prime} : T
+    }
+\]
+
 \begin{verbatim}
-G|-e : T ref
-------------
-G |- !e : T
-
-G|-e:T
----------
-G |- ref e : ref T
-
-G|-e:T ref  G|-e':T
------------------
-G |- e := e' : unit
-
-G1 f:T |- e : T
---------------------------
-G |- ref f => e : T
-
-
 (1)        (2)       sum: int->int, x:int |- sum(x-1)+x : int
 -----------------------------------------------------------------
 sum int->int, x:int |- if x=0 then 0 else sum(x-1) + x : int
@@ -1496,7 +1497,7 @@ To infer a type for \verb~fn x => e~:
 \begin{verbatim}
 G |- e => T/C   G |- e1 => T1/C1   G |- e2 => T2/C2
 ----------------------------------------------------
-G |- if e then e1 else e2 => T2 / T=book ^ T1=t2 ^ C ^ C1 ^ C2
+G |- if e then e1 else e2 => T2 / T=bool ^ T1=t2 ^ C ^ C1 ^ C2
 
 G1 x:'a1 |- e => T2/C
 -------------------------
@@ -1516,22 +1517,20 @@ Solving the constraints, we learn that \verb~'a1 = int~, and therefore
 fn x => if 3=1 then 55 else x : int->int
 \end{verbatim}
 
-\begin{verbatim}
-------------------
-G |- n => int / tt
-
-----------------------
-G |- true => bool / tt
-
-G(x) = T
-----------------
-G |- x => T / tt
-\end{verbatim}
+\[
+    \infer{\Gamma \vdash n \Rightarrow \verb~ int / tt~}{}
+\]
+\[
+    \infer{\Gamma \vdash \verb~ true => bool / tt~}{}
+\]
+\[
+    \infer{\Gamma \vdash \verb~ x => T / tt~}{
+        \Gamma (x) = T
+    }
+\]
 
 %%
 \section{19 March}
-Some small mistakes on HW4 -- see WebCT for more details.
-
 \subsection{Type inference}
 Examples:
 \begin{verbatim}
@@ -1698,22 +1697,23 @@ To make this function type check in our language, we'll need different copies of
 \subsubsection{Modifying our typing rules}
 As a solution to this problem, we can modify our old rule, which is not suitable to handle polymorphic functions. Our new rule is as follows:
 
-\begin{verbatim}
-
-G|-[e1/x]e2 : T
------------------------
-G |- let x=e1 in e2 : T
-\end{verbatim}
+\[
+    \infer{\Gamma \vdash \verb~ let x=e1 in e2 : T~}{
+        \Gamma \vdash [e_1 / x] e_2 : T
+    }
+\]
 
 Note: type checks $e_1$ multiple times -- not very efficient, but at least this will work for polymorphism. In practical languages, this is not what happens. Instead, we'll need to make the assumption $\forall \alpha -> \alpha$, so whenever we look up the type of \verb~f~, we get a ``fresh", unique copy of its type. 
 
 In ML:
 (generalize -- abstract over the free variables and quantify over them, so we can reuse them as often as we'd like)
-\begin{verbatim}
-G|- e1 : S   G1 x generalize(S) |- e2 : T
------------------------------------------
-G |- let x=e1 in e2 : T
-\end{verbatim}
+\[
+    \infer{\Gamma \vdash \verb~ let x=e1 in e2 : T~}{
+        \Gamma \vdash e_1 : S
+        &
+        \Gamma_1, x, \verb~generalize(S)~ \vdash e_2 : T
+    }
+\]
 
 In example 2, \verb~(forall 'a, 'a -> 'a) -> int~ -- full polymorphism. In ML, we have parametric polymorphism, where all quantification over type variables is at the outside. Some languages are slowly moving towards allowing full polymorphism.
 
@@ -1750,8 +1750,6 @@ Warning : type variables are not generalized because of value restriction
 
 %%
 \section{23 March}
-HW 5 out -- due 11 April, 2012
-
 \subsection{Bi-directional type checking}
 So far, we have type inference rules. 
 
@@ -1814,7 +1812,7 @@ Conversion:
 
 Example:
 \[
-    \infer[by conversion]{\vdash 3 \Leftarrow \verb~int~}{
+    \infer[\text{by conversion}]{\vdash 3 \Leftarrow \verb~int~}{
         \vdash 3 \Rightarrow \verb~int~
         &
         \verb~int = int~
@@ -1852,7 +1850,7 @@ We want to pass an int whenever a real is required (int $\leq$ real)
 \]
 
 \[
-    \infer[covariant]{T_1 \times T_2 \leq S_1 \times S_2}{
+    \infer[\text{covariant}]{T_1 \times T_2 \leq S_1 \times S_2}{
         T_1 \leq S_1
         &
         T_2 \leq S_2
@@ -1861,7 +1859,7 @@ We want to pass an int whenever a real is required (int $\leq$ real)
 
 Records are a generalization of tuples (n-ary tuples where each element has a label).
 \[
-    \infer[depth \; subtyping]{\{x_1 : T_1, \dots, x_n : T_1 \} \leq \{ x_1 : S_1, \dots, x_n : S_1 \} }{
+    \infer[\text{depth subtyping}]{\{x_1 : T_1, \dots, x_n : T_1 \} \leq \{ x_1 : S_1, \dots, x_n : S_1 \} }{
         \forall i \; T_i \leq s_1
     }
 \]
@@ -1977,7 +1975,7 @@ Recall the typing rule for subtyping:
 \] 
 Upcasting is always safe with type annotations -- it is safe to ``forget"!
 \[
-    \infer[Upcast]{\Gamma \vdash (T) e : T}{
+    \infer[\text{Upcast}]{\Gamma \vdash (T) e : T}{
         \Gamma \vdash e : S
         &
         S \leq T
@@ -2298,8 +2296,5 @@ In Java:
 In Java, functionality scattered. This isn't necessarily bad, depending on what you want to do, but there are different consequences.
 
 In functional languages, it's easy to add new functionality to functions, but harder to add new persons. In OO languages, it's hard to add new functionality to methods, but it's much easier to add a new class of people. There are many trade-offs you have to take into consideration.
-
-%%
-\section{13 April}
 
 \end{document}
